--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
     welcome gguys to another phr hero
+    <p style="background-color: aqua">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi molestias
+      at consequuntur nulla autem aperiam placeat, voluptatem libero rem
+      perferendis cupiditate doloremque vitae enim vel architecto hic ea sit
+      quo.
+    </p>
   </body>
 </html>
